// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly a community and topics 1`] = `
<Unknown>
  <ScrollViewMock
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "community-banner.png",
        }
      }
    />
    <View />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Foomunity
    </Text>
    <TopicList
      goToTopic={[Function]}
      toggleTopicSubscribe={[Function]}
      topics={
        Array [
          1,
          2,
          3,
        ]
      }
    />
  </ScrollViewMock>
</Unknown>
`;

exports[`renders correctly with pending=true 1`] = `
<Unknown>
  <ScrollViewMock
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "community-banner.png",
        }
      }
    />
    <View />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Foomunity
    </Text>
    <Loading />
  </ScrollViewMock>
</Unknown>
`;
